src/snapshots/calculator__app__tests__add-00.snap
---
source: src/app.rs
assertion_line: 272
expression: calc
---
CalculatorApp {
    value: Some(
        5.0,
    ),
    answer: None,
    last_operation: None,
    error_message: None,
}
