src/snapshots/calculator__app__tests__add-01.snap
---
source: src/app.rs
assertion_line: 272
expression: calc
---
CalculatorApp {
    value: None,
    answer: Some(
        5.0,
    ),
    last_operation: Some(
        Add,
    ),
    error_message: None,
}
