src/snapshots/calculator__app__tests__add-03.snap
---
source: src/app.rs
assertion_line: 303
expression: calc
---
CalculatorApp {
    value: None,
    answer: Some(
        11.0,
    ),
    last_operation: Some(
        Equal,
    ),
    error_message: None,
}
