src/snapshots/calculator__app__tests__empty_at_startup.snap
---
source: src/app.rs
assertion_line: 245
expression: calc
---
CalculatorApp {
    value: None,
    answer: None,
    last_operation: None,
    error_message: None,
}
